=============================================================
Version 3.0.2
=============================================================

    - Bugfix: Optimizing the display of errors in the order screen
    - Bugfix: [action] Correction of the dates of creation and update of the actions
    - Bugfix: [action] Deleting the shipping_date parameter in the action check request

=============================================================
Version 3.0.1
=============================================================

    - Feature: Complete refactoring of the installation and update processes
    - Bugfix: Add indexes to database to speed up the display of product and order grids
    - Bugfix: [export] Migration from global product selection to a multi-shop selection
    - Bugfix: [export] Retrieval of all export settings for older versions
	- Bugfix: [export] Recovering the right shop name for older versions
	- Bugfix: [export] Change image_product attribute for legacy fields
	- Bugfix: [action] Removing of action errors when orders are completed

=============================================================
Version 3.0.0
=============================================================

	- Feature: Full rewrite for the new platform Lengow
	- Feature: Add new lengow Dashboard
	- Feature: Add new product selection by shop
	- Feature: Add new lengow order with new page
	- Feature: Add new help page
	- Feature: Add new Toolbox page with all Lengow data
	- Feature: Add new legals page
	- Feature: Add new lengow simple tag
	- Feature: Add new carrier matching
	- Feature: New lengow settings with cleaning old options
	- Feature: Creating new accounts directly from the module
	- Feature: Management actions and error return
	- Feature: Add new actions: re-import, resend and re-sync orders

=============================================================
Version 2.2.10
=============================================================
