@@ -53,7 +53,7 @@
 /classes/controllers/LengowController.php|f48a60edd990e3c31b0b598b18d2e96d
 /classes/controllers/LengowHomeController.php|e613ab0dddecf52440768a813c814d54
 /classes/controllers/LengowFeedController.php|a5f063cff7e0962016daf8745a37dbb5
-/classes/controllers/LengowOrderController.php|28050b262da7cb2ec81d3f8738df79f0
+/classes/controllers/LengowOrderController.php|580ef2e3a1ed2edd15ec2975e6a326ea
 /classes/controllers/LengowLegalsController.php|f8cec875666fac608deea6380cd75925
 /classes/controllers/LengowOrderSettingController.php|c00c102a493e4df257044d0754e3e2a0
 /classes/controllers/LengowHelpController.php|1d8884f2ccf752e3fad5211b0ff0dea8
@@ -384,7 +384,7 @@
 /views/templates/admin/lengow_help/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/admin/lengow_home/layout.tpl|d4e23ff27234d8621b4fc909e1aea5dd
 /views/templates/admin/lengow_home/helpers/index.php|eb18f895c85303c2ced77482ec4ab525
-/views/templates/admin/lengow_home/helpers/view/connect.tpl|1671def74f9396040bc9eca8d9ba6bee
+/views/templates/admin/lengow_home/helpers/view/connect.tpl|2f149d750179004374ce721eaf786c80
 /views/templates/admin/lengow_home/helpers/view/view.tpl|dbf15f405fb23a7763633156541a4e56
 /views/templates/admin/lengow_home/helpers/view/status.tpl|c6187a7894aa159a25bdab0a17d65055
 /views/templates/admin/lengow_home/helpers/view/index.php|eb18f895c85303c2ced77482ec4ab525
@@ -445,7 +445,7 @@
 /views/templates/mails/nl/report.txt|de4160ab037db7fa1806b1dabe546a60
 /views/templates/mails/nl/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/index.php|eb18f895c85303c2ced77482ec4ab525
-/views/css/lengow-components.css|b6a56e64159abd2c577a95e24f71c817
+/views/css/lengow-components.css|edec176851cfb40c2718e9c2d2b3b7d6
 /views/css/font-awesome.css|bf4b58c946c9234e4a6b9f7a70d38006
 /views/css/lengow_bootstrap_15.css|14c00f7fde537f325106147778b317cd
 /views/css/lengow-tab.css|5b6066640ae15dce94cd2225d84cec50
@@ -455,7 +455,7 @@
 /views/css/lengow-layout.css|b8ea5a906dc3a43b042fb8afe9a238c6
 /views/css/bootstrap-datepicker.css|d5260247b97663d887f4efe8ec894353
 /views/css/select2.css|8969ac4614d64a13dfc32e1eb4e731f7
-/views/css/lengow-pages.css|23caa6600fc7774e9c0b2e872d437c98
+/views/css/lengow-pages.css|f8bd6d110efa7777dc7d1c814e5e4a45
 /views/css/lengow_bootstrap_14.css|fae05d00e89d99c3b0e3849c1f320157
 /views/css/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/fonts/fontawesome-webfont.ttf|a3de2170e4e9df77161ea5d3f31b2668
