@@ -83,7 +83,7 @@ body.lgw-home-iframe .lgw-content-section p {
   top: 0px;
 }
 
-.adminlengowhome .lgw-label_red {
+.adminlengowhome .lgw-label.red {
   padding: 0 8px;
 }
 
