@@ -2,6 +2,7 @@
 Version 3.0.2
 =============================================================
 
+    - Feature: Adding refunded status to order filters
     - Bugfix: Optimizing the display of errors in the order screen
     - Bugfix: [action] Correction of the dates of creation and update of the actions
     - Bugfix: [action] Deleting the shipping_date parameter in the action check request
